# ic-oss

./: .gitignore  Cargo.toml  LICENSE-MIT  Makefile  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish-crates.yml  publish.yml  release.yml  test.yml
docs/: access_control.md
e2e/verify-request-response/: Cargo.toml
e2e/verify-request-response/src/: main.rs
examples/ai_canister/: Cargo.toml  Makefile  README.md  ai_canister.did  dfx.json
examples/ai_canister/src/: lib.rs
examples/upload_js/: README.md  package-lock.json  package.json  upload.js
examples/video_player/: index.html
src/declarations/ic_object_store_canister/: ic_object_store_canister.did  ic_object_store_canister.did.d.ts  ic_object_store_canister.did.js
src/declarations/ic_oss_bucket/: ic_oss_bucket.did  ic_oss_bucket.did.d.ts  ic_oss_bucket.did.js
src/declarations/ic_oss_cluster/: ic_oss_cluster.did  ic_oss_cluster.did.d.ts  ic_oss_cluster.did.js  index.js
src/ic-fs-backend/: Cargo.toml
src/ic-oss/: Cargo.toml
src/ic-oss-bucket/: Cargo.toml  README.md  ic-oss-bucket.did
src/ic-oss-bucket/src/: api_admin.rs  api_http.rs  api_init.rs  api_query.rs  api_update.rs  lib.rs  store.rs
src/ic-oss-cli/: Cargo.toml  README.md
src/ic-oss-cli/src/: file.rs  main.rs
src/ic-oss-cluster/: Cargo.toml  README.md
src/ic-oss-frontend/: package.json
src/ic-oss-frontend/src/lib/: canisters.js
src/ic-oss-types/: Cargo.toml  README.md
src/ic-oss-types/src/: bytes.rs  file.rs  folder.rs  lib.rs
src/ic-oss/src/: file.rs  lib.rs
src/ic_object_store/: Cargo.toml  README.md
src/ic_object_store/src/: agent.rs  client.rs  lib.rs
src/ic_object_store_canister/: Cargo.toml  README.md
src/ic_object_store_canister/src/: api.rs  api_admin.rs  api_init.rs  lib.rs  store.rs
src/ic_oss/: Cargo.toml  README.md
src/ic_oss/src/: agent.rs  bucket.rs  cluster.rs  file.rs  lib.rs
src/ic_oss_bucket/: Cargo.toml  README.md  ic_oss_bucket.did
src/ic_oss_bucket/src/: api_admin.rs  api_http.rs  api_init.rs  api_query.rs  api_update.rs  lib.rs  permission.rs  store.rs
src/ic_oss_can/: Cargo.toml  README.md
src/ic_oss_can/src/: lib.rs  store.rs  types.rs
src/ic_oss_cli/: Cargo.toml  README.md
src/ic_oss_cli/src/: file.rs  main.rs
src/ic_oss_cluster/: Cargo.toml  README.md  ic_oss_cluster.did
src/ic_oss_cluster/src/: api_admin.rs  api_auth.rs  api_query.rs  ecdsa.rs  init.rs  lib.rs  schnorr.rs  store.rs
src/ic_oss_cose/: Cargo.toml  README.md
src/ic_oss_cose/src/: lib.rs
src/ic_oss_frontend/: package.json  tailwind.config.js  tsconfig.json  vite.config.js
src/ic_oss_frontend/src/: app.html  app.pcss
src/ic_oss_frontend/src/routes/(app)/: +layout.ts  +page.svelte
src/ic_oss_ts/: .eslintrc.js  README.md  package.json  pnpm-lock.yaml  tsconfig.json
src/ic_oss_ts/candid/ic_object_store_canister/: ic_object_store_canister.did  ic_object_store_canister.did.d.ts  ic_object_store_canister.did.js  index.d.ts  index.js
src/ic_oss_ts/candid/ic_oss_bucket/: ic_oss_bucket.did  ic_oss_bucket.did.d.ts  ic_oss_bucket.did.js  index.js
src/ic_oss_ts/candid/ic_oss_cluster/: ic_oss_cluster.did  ic_oss_cluster.did.d.ts  ic_oss_cluster.did.js
src/ic_oss_ts/src/: bucket.canister.ts  cluster.canister.ts  crc32.ts  index.ts  queue.ts  stream.test.ts  stream.ts  types.ts  uploader.ts
src/ic_oss_types/: Cargo.toml  README.md
src/ic_oss_types/src/: bucket.rs  bytes.rs  cluster.rs  cose.rs  cwt.rs  file.rs  folder.rs  lib.rs  object_store.rs  permission.rs
