[workspace]
members = [
  "src/ic_oss_bucket",
  "src/ic_oss_cluster",
  "src/ic_oss_types",
  "src/ic_oss",
  "src/ic_oss_cli",
]
resolver = "2"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 's'

[workspace.package]
version = "0.5.0"
edition = "2021"
repository = "https://github.com/ldclabs/ic-oss"
keywords = ["file", "storage", "oss", "s3", "icp"]
categories = ["web-programming"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
async-trait = "0.1"
bytes = "1"
base64 = "0.21"
candid = "0.10"
ciborium = "0.2"
ciborium-io = "0.2"
futures = "0.3"
futures-util = "0.3"
log = "0.4"
serde = "1"
serde_bytes = "0.11"
serde_json = { version = "1", features = ["preserve_order"] }
structured-logger = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
k256 = { version = "0.13", features = ["ecdsa"] }
ed25519-dalek = "2"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
sha3 = "0.10"
num-traits = "0.2"
ic-cdk = "0.14"
ic-cdk-timers = "0.8"
ic-stable-structures = "0.6"
icrc-ledger-types = "0.1"
ic-http-certification = { version = "2.5", features = ["serde"] }
anyhow = "1"
crc32fast = "1.4"
url = "2.5"
once_cell = "1.19"
