[workspace]
members = [
  "src/ic_oss_bucket",
  "src/ic_oss_cluster",
  "src/ic_oss_types",
  "src/ic_oss_can",
  "src/ic_oss",
  "src/ic_oss_cli",
  "examples/ai_canister",
]
resolver = "2"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 's'

[workspace.package]
version = "1.0.0"
edition = "2021"
repository = "https://github.com/ldclabs/ic-oss"
keywords = ["file", "storage", "oss", "s3", "icp"]
categories = ["web-programming"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
bytes = "1"
base64 = "0.22"
candid = "0.10"
ciborium = "0.2"
coset = "0.3"
futures = "0.3"
serde = "1"
serde_bytes = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
k256 = { version = "0.13", features = ["ecdsa"] }
ed25519-dalek = "2"
hex = "0.4"
sha2 = "0.10"
sha3 = "0.10"
num-traits = "0.2"
ic-cdk = "0.17"
ic-cdk-timers = "0.11"
ic-stable-structures = "0.6"
icrc-ledger-types = "0.1"
ic-http-certification = { version = "3.0" }
ic-agent = "0.39"
anyhow = "1"
crc32fast = "1.4"
url = "2.5"
once_cell = "1.20"
getrandom = { version = "0.2", features = ["custom"] }
