[workspace]
members = [
  "src/ic_oss",
  "src/ic_object_store",
  "src/ic_object_store_canister",
  "src/ic_oss_bucket",
  "src/ic_oss_cluster",
  "src/ic_oss_types",
  "src/ic_oss_can",
  "src/ic_oss_cli",
  "examples/ai_canister",
]
resolver = "2"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 's'

[workspace.package]
version = "1.1.5"
edition = "2021"
repository = "https://github.com/ldclabs/ic-oss"
keywords = ["object_store", "storage", "oss", "s3", "icp"]
categories = ["web-programming"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
async-trait = "0.1"
async-stream = "0.3"
bytes = "1"
base64 = "0.22"
candid = "0.10"
ciborium = "0.2"
coset = "0.3"
futures = "0.3"
serde = "1"
serde_bytes = "0.11"
object_store = { version = "0.12", default-features = false }
chrono = { version = "0.4", default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }
k256 = { version = "0.13", features = ["ecdsa"] }
ed25519-dalek = "2"
hex = "0.4"
sha2 = "0.10"
sha3 = "0.10"
aes-gcm = "0.10"
num-traits = "0.2"
ic-cdk = "0.18"
ic-cdk-timers = "0.12"
ic-stable-structures = "0.6"
icrc-ledger-types = "0.1"
ic-http-certification = { version = "3.0" }
ic_cose_types = "0.8"
ic-agent = "0.40"
anyhow = "1"
crc32fast = "1.4"
url = "2.5"
once_cell = "1.21"
rand = "0.9"
ic-dummy-getrandom-for-wasm = "0.1"
getrandom = { version = "0.3" }
ed25519-consensus = "2.1"
thiserror = "2"

[workspace.metadata.cargo-shear]
ignored = ["ic-dummy-getrandom-for-wasm"]
