[package]
name = "ic-oss-bucket"
version = "0.1.0"
edition = "2021"
description = "A bucket canister of ic-oss"
publish = false
repository = "https://github.com/ldclabs/ic-oss/tree/main/src/ic-oss-bucket"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes = { workspace = true }
candid = { workspace = true }
ciborium = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
ic-cdk = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
base64 = { workspace = true }
num-traits = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
ic-oss-types = { path = "../ic-oss-types", version = "0.1.0" }
hyperx = { git = "https://github.com/ldclabs/hyperx", version = "1.4" }
