[package]
name = "ic-oss-cluster"
description = "A cluster canister of ic-oss"
publish = false
repository = "https://github.com/ldclabs/ic-oss/tree/main/src/ic-oss-cluster"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ciborium = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
ic-cdk = { workspace = true }
