[package]
name = "ic-oss-types"
version = "0.1.1"
edition = "2021"
description = "types of ic-oss"
publish = true
repository = "https://github.com/ldclabs/ic-oss/tree/main/src/ic-oss-types"
license = "MIT"

[dependencies]
base64 = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
crc32fast = { workspace = true }
num-traits = { workspace = true }
url = { workspace = true }
