[package]
name = "ic-oss-types"
description = "types of ic-oss"
publish = true
repository = "https://github.com/ldclabs/ic-oss/tree/main/src/ic-oss-types"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
base64 = { workspace = true }
candid = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
crc32fast = { workspace = true }
num-traits = { workspace = true }
url = { workspace = true }
