[package]
name = "ic-oss"
description = "A rust client of ic-oss."
publish = true
repository = "https://github.com/ldclabs/ic-oss/tree/main/src/ic-oss"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
bytes = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
crc32fast = { workspace = true }
sha3 = { workspace = true }
ic-oss-types = { path = "../ic-oss-types", version = "0.2" }
ic-agent = "0.35"
