[package]
name = "ic_object_store_canister"
description = "A Object Store of Apache Arrow on the Internet Computer."
publish = false
repository = "https://github.com/ldclabs/ic-oss/tree/main/src/ic_object_store_canister"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-oss-types = { path = "../ic_oss_types", version = "1" }
candid = { workspace = true, features = ["value", "printer"] }
ciborium = { workspace = true }
ic-cdk = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
object_store = { workspace = true, default-features = false }
ic-stable-structures = { workspace = true }
ic-dummy-getrandom-for-wasm = { workspace = true }
