[package]
name = "ic-oss"
description = "The Rust version of the client SDK for the ic-oss cluster."
publish = true
repository = "https://github.com/ldclabs/ic-oss/tree/main/src/ic_oss"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
bytes = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
sha3 = { workspace = true }
ic-agent = { workspace = true }
ic-oss-types = { path = "../ic_oss_types", version = "1" }
