[package]
name = "ic-oss-cli"
description = "A CLI tool of ic-oss"
publish = true
repository = "https://github.com/ldclabs/ic-oss/tree/main/src/ic_oss_cli"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
bytes = { workspace = true }
candid = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
crc32fast = { workspace = true }
sha3 = { workspace = true }
ic-oss = { path = "../ic_oss", version = "0.6" }
ic-oss-types = { path = "../ic_oss_types", version = "0.6" }
ic-agent = "0.36"
anyhow = "1"
clap = { version = "=4.5", features = ["derive"] }
infer = "0.15"
mime-db = "1"
ring = "0.17"
pem = "3"
chrono = { version = "0.4", features = ["serde"] }
