[package]
name = "ic-oss-cli"
description = "A command-line tool implemented in Rust for the ic-oss cluster."
publish = true
repository = "https://github.com/ldclabs/ic-oss/tree/main/src/ic_oss_cli"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
candid = { workspace = true, features = ["value", "printer"] }
serde_bytes = { workspace = true }
tokio = { workspace = true }
sha3 = { workspace = true }
hex = { workspace = true }
ic-agent = { workspace = true }
ic-oss = { path = "../ic_oss", version = "1" }
ic-oss-types = { path = "../ic_oss_types", version = "1" }
anyhow = "1"
clap = { version = "=4.5", features = ["derive"] }
infer = "0.15"
mime-db = "1"
ring = "0.17"
pem = "3"
chrono = { version = "0.4", features = ["serde"] }
