[package]
name = "ic_oss_cluster"
description = "A cluster canister of ic-oss"
publish = false
repository = "https://github.com/ldclabs/ic-oss/tree/main/src/ic_oss_cluster"
version.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes = { workspace = true }
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
base64 = { workspace = true }
ciborium = { workspace = true }
hex = { workspace = true }
coset = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
getrandom = { workspace = true }
ic-oss-types = { path = "../ic_oss_types", version = "0.5" }
